# dioxus-simple-pdf-tools

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md
assets/: tailwind.css
docs/: index.html
docs/assets/: tailwind-1ca313e49558ff6e.css
docs/wasm/: dioxus-simple-pdf-tools.js  dioxus-simple-pdf-tools.js.br  dioxus-simple-pdf-tools_bg.wasm  dioxus-simple-pdf-tools_bg.wasm.br
docs/wasm/snippets/dioxus-interpreter-js-654dc4519bce26d0/: inline0.js  inline0.js.br
src/: error.rs  main.rs  routes.rs  utils.rs
src/components/: base_layout.rs  card.rs  display_pdf.rs  drop_area.rs  footer.rs  hero.rs  item_action.rs  list_pdf.rs  merge_download.rs  mod.rs  nav_menu.rs  navbar.rs  result_pdf.rs  sidebar_menu.rs  split_action.rs  split_input_page_number_str.rs
src/components/input_file/: merge_input_file.rs  mod.rs  split_input_file.rs
src/pdf/: error.rs  merge.rs  mod.rs  split.rs
src/servers/: mod.rs
src/views/: home.rs  merge.rs  mod.rs  not_found.rs  split.rs
